trunk/tests/jastadd/negative/type_errors/L2/7_TypeCheckingCaseStmt3.ob
MODULE TestModule;
    VAR i : INTEGER;
BEGIN
    CASE 10+i OF
   	1:
    | 2..3+1:
    | 5..i+1:
    END
END TestModule.
